--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,6 @@
 name: transcriber
 channels:
-  - defaults
+  - conda-forge
 dependencies:
   - python=3.9
   - pip
-  - pip:
-      - streamlit
-      - git+https://github.com/openai/whisper.git
-      - pydub
